block can move side to side but there is a bug with how much it moves to the side

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <header>
     <h1></h1>
     <button>Drop</button>
+    <button class="test-btn">test</button>
   </header>
   <main>
     <div class="board-container"></div>
