Add side grids, amend logic to the storing of pieces and update the reset method

--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
     <button class="test-btn">test</button>
   </header>
   <main>
+    <aside>
+      <div class="reserve-piece">
+
+      </div>
+    </aside>
     <div class="board-container"></div>
+    <aside class="future-pieces">
+      <div class="first-future-piece">
+
+      </div>
+      <div class="second-future-piece">
+
+      </div>
+      <div class="third-future-piece">
+
+      </div>
+    </aside>
   </main>
   <footer>
 
