--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
   </header>
   <main>
     <aside>
-      <div class="reserve-piece">
+      <div class="reserve-container">
+        <div class="reserve-piece">
 
+        </div>
       </div>
+      
     </aside>
     <div class="board-container"></div>
     <aside class="future-pieces">
